--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/short-url"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
