--- a/apps/web/.eslintrc.json
+++ b/apps/web/.eslintrc.json
@@ -13,14 +13,7 @@
             "style": "camelCase"
           }
         ],
-        "@angular-eslint/component-selector": [
-          "error",
-          {
-            "type": "element",
-            "prefix": "url-shortener",
-            "style": "kebab-case"
-          }
-        ]
+        "@angular-eslint/component-selector": ["off"]
       },
       "extends": [
         "plugin:@nrwl/nx/angular",
