--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~15.1.0",
+    "@angular/cdk": "^15.2.0",
     "@angular/common": "~15.1.0",
     "@angular/compiler": "~15.1.0",
     "@angular/core": "~15.1.0",
@@ -72,6 +73,7 @@
     "jest-preset-angular": "~12.2.3",
     "nx": "15.7.2",
     "prettier": "^2.6.2",
+    "tailwindcss": "^3.2.7",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.8.2"
